# OpenCV330Test

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencv330test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  first.cpp  first.h  log.h  native-lib.cpp  native-lib.hpp
app/src/main/java/com/example/opencv330test/: DetectionBasedTracker.java  FaceDetectionActivity.java  LogUtils.java  MainActivity.java  NDKUtils.java
app/src/main/res/layout/: activity_face_detection.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/opencv330test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: .gitignore
